fixing the overflow-x

--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -129,7 +129,7 @@ FOOTER
 @media only screen and (max-width: 767px) {
   
   html {
-    overflow-y: hidden;
+    overflow-x: hidden;
     font-size: 18px;
   }
 
